# adiosy_engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Core/: CMakeLists.txt
Core/include/Core/: AdApplication.h  AdApplicationContext.h  AdEntryPoint.h
Core/include/Core/ECS/: AdComponent.h  AdEntity.h  AdNode.h  AdScene.h  AdSystem.h  AdUUID.h
Core/include/Core/ECS/Component/: AdBaseMaterialComponent.h  AdLookAtCameraComponent.h  AdMeshComponent.h  AdTransformComponent.h
Core/include/Core/ECS/Component/Material/: AdBaseMaterialComponent.h  AdMaterialComponent.h  AdUnlitMaterialComponent.h
Core/include/Core/ECS/System/: AdBaseMaterialSystem.h  AdMaterialSystem.h  AdUnlitMaterialComponent.h  AdUnlitMaterialSystem.h
Core/include/Core/Render/: AdMaterial.h  AdMesh.h  AdRenderContext.h  AdRenderTarget.h  AdRenderer.h  AdSampler.h  AdTexture.h
Core/src/: AdApplication.cpp
Core/src/ECS/: AdEntity.cpp  AdNode.cpp  AdScene.cpp  AdUUID.cpp
Core/src/ECS/Component/: AdLookAtCameraComponent.cpp
Core/src/ECS/System/: AdBaseMaterialSystem.cpp  AdMaterialSystem.cpp  AdUnlitMaterialSystem.cpp
Core/src/Render/: AdMaterial.cpp  AdMesh.cpp  AdRenderContext.cpp  AdRenderTarget.cpp  AdRenderer.cpp  AdSampler.cpp  AdTexture.cpp
Platform/: CMakeLists.txt
Platform/include/Platform/: AdEngine.h  AdFileUtils.h  AdGraphicContext.h  AdLog.h  AdWindow.h
Platform/include/Platform/Event/: AdEvent.h  AdEventDispatcher.h  AdEventObserver.h  AdKeyEvent.h  AdMouseEvent.h  AdWindowEvent.h
Platform/include/Platform/Graphic/: AdSwapchain.h  AdVKBuffer.h  AdVKCommandBuffer.h  AdVKCommon.h  AdVKDescriptorSet.h  AdVKDevice.h  AdVKFrameBuffer.h  AdVKGraphicContext.h  AdVKImage.h  AdVKImageView.h  AdVKPipeline.h  AdVKQueue.h  AdVKRenderPass.h  AdVKSwapchain.h
Platform/include/Platform/Window/: AdGLFWwindow.h
Platform/src/: AdGraphicContext.cpp  AdLog.cpp  AdWindow.cpp
Platform/src/Event/: AdEventDispatcher.cpp
Platform/src/Graphic/: AdSwapchain.cpp  AdVKBuffer.cpp  AdVKCommandBuffer.cpp  AdVKDescriptorSet.cpp  AdVKDevice.cpp  AdVKFrameBuffer.cpp  AdVKGraphicContext.cpp  AdVKImage.cpp  AdVKImageView.cpp  AdVKPipeline.cpp  AdVKQueue.cpp  AdVKRenderPass.cpp  AdVKSwapchain.cpp
Platform/src/Window/: AdGLFWwindow.cpp
Resource/Shader/: 00_hello_buffer.vert  00_hello_buffer.vert.spv  00_hello_triangle.vert.spv  01_hello_buffer.vert.spv  02_descriptor_set.frag  02_descriptor_set.frag.spv  02_descriptor_set.vert  02_descriptor_set.vert.spv  03_unlit_material.frag  03_unlit_material.vert
Sample/: CMakeLists.txt
Sample/01_FirstCube/: CMakeLists.txt
Sample/02_ECS_Entity/: CMakeLists.txt  main.cpp
Sample/03_Event_Camera/: CMakeLists.txt  main.cpp
Sample/04_Material_System/: CMakeLists.txt  main.cpp
Sample/FirstCube/: CMakeLists.txt  main.cpp
Sample/SandBox/: CMakeLists.txt  main.cpp
cmake/: SPIR-V.cmake
